# mymarriage

./: .gitignore  manage.py  pyproject.toml
apps/users/: managers.py  models.py
apps/users/migrations/: 0001_initial.py
mymarriage/: asgi.py  settings.py  urls.py  wsgi.py
